Basic functionality finished
Changed note duration from output compare to HAL_Delay.

Should consider expanding octave & adding rests.
Rests should be relatively easy:
- check for note[idx] == -1
- don't play sound for duration

--- a/MFCSTMProject.ioc
+++ b/MFCSTMProject.ioc
@@ -6,25 +6,19 @@ Mcu.Family=STM32F4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=TIM2
-Mcu.IP3=TIM3
-Mcu.IP4=TIM4
-Mcu.IP5=TIM5
-Mcu.IP6=USART3
-Mcu.IPNb=7
+Mcu.IP3=USART3
+Mcu.IPNb=4
 Mcu.Name=STM32F429ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PA0/WKUP
-Mcu.Pin10=VP_TIM5_VS_ClockSourceINT
 Mcu.Pin2=PB0
 Mcu.Pin3=PB14
 Mcu.Pin4=PD8
 Mcu.Pin5=PD9
 Mcu.Pin6=PB7
 Mcu.Pin7=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin8=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin9=VP_TIM4_VS_ClockSourceINT
-Mcu.PinsNb=11
+Mcu.PinsNb=8
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429ZITx
@@ -41,9 +35,6 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
-NVIC.TIM3_IRQn=true\:0\:0\:false\:true\:true\:3\:true\:true\:true
-NVIC.TIM4_IRQn=true\:0\:0\:false\:true\:true\:4\:true\:true\:true
-NVIC.TIM5_IRQn=true\:0\:0\:false\:true\:true\:5\:true\:true\:true
 NVIC.USART3_IRQn=true\:0\:0\:false\:true\:true\:2\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0/WKUP.Signal=S_TIM2_CH1_ETR
@@ -89,7 +80,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_TIM4_Init-TIM4-false-HAL-true,7-MX_TIM5_Init-TIM5-false-HAL-true
 RCC.AHBFreq_Value=16000000
 RCC.APB1Freq_Value=16000000
 RCC.APB2Freq_Value=16000000
@@ -123,24 +114,9 @@ TIM2.IPParameters=Channel-Output Compare1 CH1,OCMode_1,Prescaler,Period
 TIM2.OCMode_1=TIM_OCMODE_TOGGLE
 TIM2.Period=3816-1
 TIM2.Prescaler=8-1
-TIM3.IPParameters=Prescaler,Period
-TIM3.Period=1000-1
-TIM3.Prescaler=16000-1
-TIM4.IPParameters=Prescaler,Period
-TIM4.Period=500-1
-TIM4.Prescaler=16000-1
-TIM5.IPParameters=Prescaler,Period
-TIM5.Period=250-1
-TIM5.Prescaler=16000-1
 USART3.IPParameters=VirtualMode
 USART3.VirtualMode=VM_ASYNC
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
-VP_TIM3_VS_ClockSourceINT.Mode=Internal
-VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
-VP_TIM4_VS_ClockSourceINT.Mode=Internal
-VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
-VP_TIM5_VS_ClockSourceINT.Mode=Internal
-VP_TIM5_VS_ClockSourceINT.Signal=TIM5_VS_ClockSourceINT
 board=custom
 isbadioc=false
