Add button control of music play/pause

--- a/MFCSTMProject.ioc
+++ b/MFCSTMProject.ioc
@@ -1,4 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
+CAD.formats=
+CAD.pinconfig=
+CAD.provider=
 File.Version=6
 KeepUserPlacement=false
 Mcu.CPN=STM32F429ZIT6
@@ -12,13 +15,14 @@ Mcu.Name=STM32F429ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PA0/WKUP
-Mcu.Pin2=PB0
-Mcu.Pin3=PB14
-Mcu.Pin4=PD8
-Mcu.Pin5=PD9
-Mcu.Pin6=PB7
-Mcu.Pin7=VP_TIM2_VS_ClockSourceINT
-Mcu.PinsNb=8
+Mcu.Pin2=PA3
+Mcu.Pin3=PB0
+Mcu.Pin4=PB14
+Mcu.Pin5=PD8
+Mcu.Pin6=PD9
+Mcu.Pin7=PB7
+Mcu.Pin8=VP_TIM2_VS_ClockSourceINT
+Mcu.PinsNb=9
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429ZITx
@@ -27,6 +31,7 @@ MxDb.Version=DB.6.0.60
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:true\:true\:1\:true\:true\:true
+NVIC.EXTI3_IRQn=true\:0\:0\:false\:true\:true\:2\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -35,9 +40,11 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
-NVIC.USART3_IRQn=true\:0\:0\:false\:true\:true\:2\:true\:true\:true
+NVIC.USART3_IRQn=true\:0\:0\:false\:true\:true\:3\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0/WKUP.Signal=S_TIM2_CH1_ETR
+PA3.Locked=true
+PA3.Signal=GPXTI3
 PB0.Locked=true
 PB0.Signal=GPIO_Output
 PB14.Locked=true
@@ -75,12 +82,13 @@ ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=MFCSTMProject.ioc
 ProjectManager.ProjectName=MFCSTMProject
+ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_TIM4_Init-TIM4-false-HAL-true,7-MX_TIM5_Init-TIM5-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.AHBFreq_Value=16000000
 RCC.APB1Freq_Value=16000000
 RCC.APB2Freq_Value=16000000
@@ -107,6 +115,8 @@ RCC.VcooutputI2S=96000000
 RCC.VcooutputI2SQ=96000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+SH.GPXTI3.0=GPIO_EXTI3
+SH.GPXTI3.ConfNb=1
 SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Output Compare1 CH1
 SH.S_TIM2_CH1_ETR.ConfNb=1
 TIM2.Channel-Output\ Compare1\ CH1=TIM_CHANNEL_1
